# llm.lang

./: .gitignore  Cargo.toml  DEBUG_INSTRUCTIONS.md  LICENSE  README.md  launch_vscode.sh
.vscode-data/: machineid
.vscode-data/CachedProfilesData/__default__profile__/: extensions.builtin.cache
.vscode-data/User/: settings.json
.vscode-extensions/: extensions.json
.vscode-extensions/llm-lang.llm-lang-0.1.0/: .vsixmanifest  README.md  extension.js  package.json
docs/: code_examples.md  core_components.md  getting_started.md  implementation_roadmap.md  language_specification.md  lexer_parser_implementation.md  project_structure.md  prototype_implementation_plan.md  runtime_environment_implementation.md  semantic_analyzer_implementation.md  standard_library.md
examples/: debug_test.llm  hello_world.llm  llm_features.llm  self_modifying.llm  simple_hello.llm  simple_print.llm  test.llm  test_lexer.llm
examples/applications/: data_analysis.llm
scripts/: run_example.sh
src/: lib.rs
src/lexer/: error.rs  mod.rs  token.rs
src/parser/: ast.rs  error.rs  mod.rs
src/runtime/: context.rs  engine.rs  error.rs  example.rs  interop.rs  memory.rs  mod.rs  modify.rs  nlp.rs  parallel.rs  vector.rs
src/semantic/: analyzer.rs  error.rs  mod.rs
src/stdlib/: mod.rs
src/utils/: mod.rs
tools/llm_lang_dap/: Cargo.toml  README.md
tools/llm_lang_dap/src/: main.rs
tools/llm_lang_fmt/: Cargo.toml  README.md
tools/llm_lang_fmt/src/: main.rs
tools/llm_lang_lsp/: Cargo.toml  README.md
tools/llm_lang_lsp/src/: main.rs
tools/llm_lang_vscode/: README.md  debugAdapter.js  extension.js  language-configuration.json  llm-lang-0.1.0.vsix  package-lock.json  package.json
tools/llm_lang_vscode/syntaxes/: llm.tmLanguage.json
