[package]
name = "llm_lang_dap"
version = "0.1.0"
edition = "2021"
authors = ["LLM.lang Contributors"]
description = "Debug Adapter Protocol implementation for LLM.lang"
repository = "https://github.com/llm-lang/llm.lang"
license = "MIT"
readme = "README.md"

[dependencies]
llm_lang = { path = "../.." }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
dashmap = "5.4"
