[package]
name = "llm_lang_fmt"
version = "0.1.0"
edition = "2021"
authors = ["LLM.lang Contributors"]
description = "Code formatter for LLM.lang"
repository = "https://github.com/llm-lang/llm.lang"
license = "MIT"
readme = "README.md"

[dependencies]
llm_lang = { path = "../.." }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
